--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.js",
-    "prisma:seed": "node prisma/seed.js"
+    "prisma:seed": "node prisma/seed/seed.js" 
   },
   "prisma": {
     "seed": "node prisma/seed/seed.js"
